@@ -1,5 +1,12 @@
 Changes with Apache 1.3.1
 
+  *) Win32: Don't collapse multiple slashes in PATH_INFO.
+     [Ben Laurie, Bill Stoddard <wgstodda@us.ibm.com>] PR#2274
+
+  *) Win32 (security): Eliminate trailing "."s in path components. These are
+     ignored by the Windows filesystem, and so can be used to bypass security.
+	 [Ben Laurie, Alexei Kosut].
+
   *) We now attempt to dump core when we get SIGILL. [Jim Jagielski]
 
   *) PORT: remove broken test for MAP_FILE in http_main.c.
